Fix margins for project list on mobile

--- a/projects/static/css/garth.css
+++ b/projects/static/css/garth.css
@@ -732,7 +732,7 @@ Project List
   color: var(--light-cyan);
   border: 5px var(--peachy);
   border-radius: 50px 20px 50px 20px;
-  margin: 15px;
+  margin-top: 15px;
   border: 5px var(--outer-space) solid;
   transition: .25s;
 }
